--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.0.Final'
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.3.0.Final'
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.17.RELEASE'
-
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.17.RELEASE'
     compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
@@ -30,4 +29,7 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    //web service
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
 }
